--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -1,6 +1,6 @@
 {% comment %}
 *
-*  To customize the navigation of *Feeling Responsive*,
+*  To customize the navigation of *SMART Corp*,
 *  edit `_data/navigation.yml`.
 *
 {% endcomment %}
