--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -47,3 +47,8 @@ sitemap:
 {% endif %}
 
 @import "11_syntax-highlighting.scss";
+
+.bg-white {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity)) !important;
+}
