--- a/_layouts/resume_layout.html
+++ b/_layouts/resume_layout.html
@@ -6,14 +6,6 @@ layout: compress
 
 <head>
     {% include _head.html %}
-    <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-    <meta name=ProgId content=Word.Document>
-    <meta name=Generator content="Microsoft Word 15">
-    <meta name=Originator content="Microsoft Word 15">
-    <link rel=File-List href="Zaki-Alam-Resume_files/filelist.xml">
-        <link rel=dataStoreItem href="Zaki-Alam-Resume_files/item0001.xml" target="Zaki-Alam-Resume_files/props002.xml">
-    <link rel=themeData href="Zaki-Alam-Resume_files/themedata.thmx">
-    <link rel=colorSchemeMapping href="Zaki-Alam-Resume_files/colorschememapping.xml">
     <style>
         <!--
         /* Font Definitions */
@@ -85,7 +77,7 @@ layout: compress
             margin-left: 0in;
             line-height: 107%;
             mso-pagination: widow-orphan;
-            font-size: 11.0pt;
+            font-size: 14.0pt;
             font-family: "Calibri", sans-serif;
             mso-ascii-font-family: Calibri;
             mso-ascii-theme-font: minor-latin;
@@ -93,7 +85,7 @@ layout: compress
             mso-fareast-theme-font: minor-latin;
             mso-hansi-font-family: Calibri;
             mso-hansi-theme-font: minor-latin;
-            mso-bidi-font-family: "Times New Roman";
+            mso-bidi-font-family: "Calibri";
             mso-bidi-theme-font: minor-bidi;
         }
 
@@ -111,15 +103,15 @@ layout: compress
             mso-pagination: widow-orphan lines-together;
             page-break-after: avoid;
             mso-outline-level: 2;
-            font-size: 13.0pt;
+            font-size: 14.0pt;
             font-family: "Calibri Light", sans-serif;
             mso-ascii-font-family: "Calibri Light";
             mso-ascii-theme-font: major-latin;
-            mso-fareast-font-family: "Times New Roman";
+            mso-fareast-font-family: "Calibri";
             mso-fareast-theme-font: major-fareast;
             mso-hansi-font-family: "Calibri Light";
             mso-hansi-theme-font: major-latin;
-            mso-bidi-font-family: "Times New Roman";
+            mso-bidi-font-family: "Calibri";
             mso-bidi-theme-font: major-bidi;
             color: #2F5496;
             mso-themecolor: accent1;
@@ -135,7 +127,7 @@ layout: compress
             margin: 0in;
             mso-pagination: widow-orphan;
             tab-stops: center 3.25in right 6.5in;
-            font-size: 11.0pt;
+            font-size: 14.0pt;
             font-family: "Calibri", sans-serif;
             mso-ascii-font-family: Calibri;
             mso-ascii-theme-font: minor-latin;
@@ -143,7 +135,7 @@ layout: compress
             mso-fareast-theme-font: minor-latin;
             mso-hansi-font-family: Calibri;
             mso-hansi-theme-font: minor-latin;
-            mso-bidi-font-family: "Times New Roman";
+            mso-bidi-font-family: "Calibri";
             mso-bidi-theme-font: minor-bidi;
         }
 
@@ -155,7 +147,7 @@ layout: compress
             margin: 0in;
             mso-pagination: widow-orphan;
             tab-stops: center 3.25in right 6.5in;
-            font-size: 11.0pt;
+            font-size: 14.0pt;
             font-family: "Calibri", sans-serif;
             mso-ascii-font-family: Calibri;
             mso-ascii-theme-font: minor-latin;
@@ -163,7 +155,7 @@ layout: compress
             mso-fareast-theme-font: minor-latin;
             mso-hansi-font-family: Calibri;
             mso-hansi-theme-font: minor-latin;
-            mso-bidi-font-family: "Times New Roman";
+            mso-bidi-font-family: "Calibri";
             mso-bidi-theme-font: minor-bidi;
         }
 
@@ -180,9 +172,9 @@ layout: compress
             mso-add-space: auto;
             text-align: justify;
             mso-pagination: widow-orphan;
-            font-size: 11.0pt;
-            font-family: "Times New Roman", serif;
-            mso-fareast-font-family: "Times New Roman";
+            font-size: 14.0pt;
+            font-family: "Calibri", serif;
+            mso-fareast-font-family: "Calibri";
         }
 
         p.MsoListParagraphCxSpFirst,
@@ -199,9 +191,9 @@ layout: compress
             mso-add-space: auto;
             text-align: justify;
             mso-pagination: widow-orphan;
-            font-size: 11.0pt;
-            font-family: "Times New Roman", serif;
-            mso-fareast-font-family: "Times New Roman";
+            font-size: 14.0pt;
+            font-family: "Calibri", serif;
+            mso-fareast-font-family: "Calibri";
         }
 
         p.MsoListParagraphCxSpMiddle,
@@ -218,9 +210,9 @@ layout: compress
             mso-add-space: auto;
             text-align: justify;
             mso-pagination: widow-orphan;
-            font-size: 11.0pt;
-            font-family: "Times New Roman", serif;
-            mso-fareast-font-family: "Times New Roman";
+            font-size: 14.0pt;
+            font-family: "Calibri", serif;
+            mso-fareast-font-family: "Calibri";
         }
 
         p.MsoListParagraphCxSpLast,
@@ -237,9 +229,9 @@ layout: compress
             mso-add-space: auto;
             text-align: justify;
             mso-pagination: widow-orphan;
-            font-size: 11.0pt;
-            font-family: "Times New Roman", serif;
-            mso-fareast-font-family: "Times New Roman";
+            font-size: 14.0pt;
+            font-family: "Calibri", serif;
+            mso-fareast-font-family: "Calibri";
         }
 
         p.DHHeading1,
@@ -263,8 +255,8 @@ layout: compress
             mso-padding-alt: 0in 0in 12.0pt 0in;
             font-size: 18.0pt;
             font-family: "Trebuchet MS", sans-serif;
-            mso-fareast-font-family: "Times New Roman";
-            mso-bidi-font-family: "Times New Roman";
+            mso-fareast-font-family: "Calibri";
+            mso-bidi-font-family: "Calibri";
             color: #0085C3;
             mso-ansi-language: EN-GB;
             font-weight: bold;
@@ -284,8 +276,8 @@ layout: compress
             margin-bottom: 6.0pt;
             margin-left: 0in;
             mso-pagination: widow-orphan;
-            font-size: 10.0pt;
-            mso-bidi-font-size: 12.0pt;
+            font-size: 14.0pt;
+            mso-bidi-font-size: 14.0pt;
             font-family: "Arial", sans-serif;
             mso-fareast-font-family: "MS Mincho";
             mso-ansi-language: EN-GB;
@@ -296,8 +288,8 @@ layout: compress
             mso-style-unhide: no;
             mso-style-locked: yes;
             mso-style-link: "DB Body";
-            mso-ansi-font-size: 10.0pt;
-            mso-bidi-font-size: 12.0pt;
+            mso-ansi-font-size: 14.0pt;
+            mso-bidi-font-size: 14.0pt;
             font-family: "Arial", sans-serif;
             mso-ascii-font-family: Arial;
             mso-fareast-font-family: "MS Mincho";
@@ -316,11 +308,11 @@ layout: compress
             mso-pagination: widow-orphan;
             page-break-after: avoid;
             mso-outline-level: 2;
-            font-size: 11.0pt;
-            mso-bidi-font-size: 12.0pt;
+            font-size: 14.0pt;
+            mso-bidi-font-size: 14.0pt;
             font-family: "Arial", sans-serif;
-            mso-fareast-font-family: "Times New Roman";
-            mso-bidi-font-family: "Times New Roman";
+            mso-fareast-font-family: "Calibri";
+            mso-bidi-font-family: "Calibri";
         }
 
         span.Heading2Char {
@@ -335,11 +327,11 @@ layout: compress
             font-family: "Calibri Light", sans-serif;
             mso-ascii-font-family: "Calibri Light";
             mso-ascii-theme-font: major-latin;
-            mso-fareast-font-family: "Times New Roman";
+            mso-fareast-font-family: "Calibri";
             mso-fareast-theme-font: major-fareast;
             mso-hansi-font-family: "Calibri Light";
             mso-hansi-theme-font: major-latin;
-            mso-bidi-font-family: "Times New Roman";
+            mso-bidi-font-family: "Calibri";
             mso-bidi-theme-font: major-bidi;
             color: #2F5496;
             mso-themecolor: accent1;
@@ -377,7 +369,7 @@ layout: compress
             mso-fareast-theme-font: minor-latin;
             mso-hansi-font-family: Calibri;
             mso-hansi-theme-font: minor-latin;
-            mso-bidi-font-family: "Times New Roman";
+            mso-bidi-font-family: "Calibri";
             mso-bidi-theme-font: minor-bidi;
         }
 
@@ -508,7 +500,7 @@ layout: compress
             mso-level-number-position: left;
             margin-left: 117.0pt;
             text-indent: -.25in;
-            mso-ansi-font-size: 10.0pt;
+            mso-ansi-font-size: 14.0pt;
             font-family: Symbol;
         }
 
@@ -519,9 +511,9 @@ layout: compress
             mso-level-number-position: left;
             margin-left: 153.0pt;
             text-indent: -.25in;
-            mso-ansi-font-size: 10.0pt;
+            mso-ansi-font-size: 14.0pt;
             font-family: "Courier New";
-            mso-bidi-font-family: "Times New Roman";
+            mso-bidi-font-family: "Calibri";
         }
 
         @list l1:level3 {
@@ -531,7 +523,7 @@ layout: compress
             mso-level-number-position: left;
             margin-left: 189.0pt;
             text-indent: -.25in;
-            mso-ansi-font-size: 10.0pt;
+            mso-ansi-font-size: 14.0pt;
             font-family: Wingdings;
         }
 
@@ -542,7 +534,7 @@ layout: compress
             mso-level-number-position: left;
             margin-left: 225.0pt;
             text-indent: -.25in;
-            mso-ansi-font-size: 10.0pt;
+            mso-ansi-font-size: 14.0pt;
             font-family: Wingdings;
         }
 
@@ -553,7 +545,7 @@ layout: compress
             mso-level-number-position: left;
             margin-left: 261.0pt;
             text-indent: -.25in;
-            mso-ansi-font-size: 10.0pt;
+            mso-ansi-font-size: 14.0pt;
             font-family: Wingdings;
         }
 
@@ -564,7 +556,7 @@ layout: compress
             mso-level-number-position: left;
             margin-left: 297.0pt;
             text-indent: -.25in;
-            mso-ansi-font-size: 10.0pt;
+            mso-ansi-font-size: 14.0pt;
             font-family: Wingdings;
         }
 
@@ -575,7 +567,7 @@ layout: compress
             mso-level-number-position: left;
             margin-left: 333.0pt;
             text-indent: -.25in;
-            mso-ansi-font-size: 10.0pt;
+            mso-ansi-font-size: 14.0pt;
             font-family: Wingdings;
         }
 
@@ -586,7 +578,7 @@ layout: compress
             mso-level-number-position: left;
             margin-left: 369.0pt;
             text-indent: -.25in;
-            mso-ansi-font-size: 10.0pt;
+            mso-ansi-font-size: 14.0pt;
             font-family: Wingdings;
         }
 
@@ -597,7 +589,7 @@ layout: compress
             mso-level-number-position: left;
             margin-left: 405.0pt;
             text-indent: -.25in;
-            mso-ansi-font-size: 10.0pt;
+            mso-ansi-font-size: 14.0pt;
             font-family: Wingdings;
         }
 
@@ -627,13 +619,13 @@ layout: compress
         mso-para-margin-left:0in;
         line-height:107%;
         mso-pagination:widow-orphan;
-        font-size:11.0pt;
+        font-size:14.0pt;
         font-family:"Calibri",sans-serif;
         mso-ascii-font-family:Calibri;
         mso-ascii-theme-font:minor-latin;
         mso-hansi-font-family:Calibri;
         mso-hansi-theme-font:minor-latin;
-        mso-bidi-font-family:"Times New Roman";
+        mso-bidi-font-family:"Calibri";
         mso-bidi-theme-font:minor-bidi;}
     table.MsoTableGrid
         {mso-style-name:"Table Grid";
@@ -648,13 +640,13 @@ layout: compress
         mso-border-insidev:.5pt solid windowtext;
         mso-para-margin:0in;
         mso-pagination:widow-orphan;
-        font-size:11.0pt;
+        font-size:14.0pt;
         font-family:"Calibri",sans-serif;
         mso-ascii-font-family:Calibri;
         mso-ascii-theme-font:minor-latin;
         mso-hansi-font-family:Calibri;
         mso-hansi-theme-font:minor-latin;
-        mso-bidi-font-family:"Times New Roman";
+        mso-bidi-font-family:"Calibri";
         mso-bidi-theme-font:minor-bidi;}
     </style>
     <![endif]-->
@@ -667,7 +659,7 @@ layout: compress
      </o:shapelayout></xml><![endif]-->
 </head>
 
-<body lang=EN-US style='tab-interval:.5in;word-wrap:break-word'>
+<body lang=EN-US style='tab-interval:.5in;word-wrap:break-word' class="{{ layout.format }}">
 
     {% unless page.skip_boilerplate %}
 	{% include _navigation.html %}
