--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -101,3 +101,13 @@
 	</script>
 	{% endif %}
 
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
+	</script>
+
+	<!-- photo-gallery stuffs -->
+	<script type="text/javascript" src="/assets/js/lightbox.js"></script>
+	<link rel="stylesheet" href="/assets/css/lightbox.css">
+	<div id="lightbox" class="gallery" style="display: none;"></div>
