--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -2,9 +2,7 @@
 	<div class="panel radius">
 		<h3>Sidebar</h3>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
-			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			Placeholder. To be added as needed.
 		</p>
 	</div>
 
@@ -12,9 +10,9 @@
 
 
 	<div class="border-dotted radius b30">
-		<img src="http://placekitten.com/271/270" alt="uh, Placekitten">
+		<img src="/assets/images/placeholder.png" alt="uPlaceholder">
 		<p class="text-left">
-			This is an advertisment with a crazy cat! <a href="http://placekitten.com/">More cats, please!</a>
+			Placeholder <a href="#">Placeholder only!</a>
 		</p>
 	</div>
 </aside>
