--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -51,7 +51,7 @@
 	{% if site.yandex_site_verification %}<meta name="yandex-verification" content="{{ site.yandex_site_verification }}">{% endif %}
 	{% if site.alexa_verify_id %}<meta name="alexaVerifyID" content="{{ site.alexa_verify_id }}">{% endif %}
 	{% if page.noindex == true or layout.noindex == true %}<meta name="robots" content="noindex">{% endif %}
-	<link rel="canonical" href="{{ url }}{{ page.url }}">
+	<link rel="canonical" href="https://SMART-Corporation.com">
 
 
 	<!-- Facebook Open Graph -->
